fix broken css, added language changes, added re-activate button

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -403,10 +403,17 @@ tr.shown td.details-control {
 }
 
 .specials_full_info {
+    display: none;
     padding: 16px;
+    border: 2px solid #ececec;
     border-radius: 6px;
     margin: 12px -6px -16px;
     behavior: url(/i/pie/PIE.htc);
+}
+
+.specials_full_info_datatables {
+    display: block;
+    margin: 0;
 }
 
 img.specials_info_img {
@@ -548,6 +555,20 @@ img.specials_info_img {
 
 .specials_confirm, #specials_confirm {
     background: #75ad45;
+    color: #fff;
+    padding: 8px;
+    width: 220px;
+    border: 0px;
+    text-align: center;
+    display: inline-block;
+    border-radius: 6px;
+    font: 12px Roboto-Regular; 
+    cursor: pointer;
+    behavior: url(/i/pie/PIE.htc);
+}
+
+.specials_reactivate, #specials_reactivate {
+    background: #f35b31;
     color: #fff;
     padding: 8px;
     width: 220px;
